(fix) fix volume change (fix) disable vk search